fix avatar layout issue

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   overflow: hidden;
   margin-right: 17px;
 }
-.talk-stream-comment-avatar.talk-slot-comment-avatar {
+.talk-stream-comment-avatar.talk-slot-comment-avatar > img {
   height: 100%;
   width: 100%;
   object-fit: cover;
